feat: upgrade to Qwen2.5 14B & BGE-M3 RAG pipeline, externalize env variables, fix TimeFrame and ta4j ingestion